# kuuve_2018

./: CMakeLists.txt  README.md  package.xml
crosswalk_stop/: CMakeLists.txt  package.xml
crosswalk_stop/include/crosswalk_stop/: CrosswalkStopNode.h
crosswalk_stop/launch/include/: crosswalk_stop.launch
crosswalk_stop/src/: CrosswalkStop.cpp  CrosswalkStopNode.cpp
dynamic_avoidance/: CMakeLists.txt  package.xml
dynamic_avoidance/launch/: dynamic_avoidance.launch  dynamic_avoidance_action.launch  narrow_path.launch  obstacle_detector.launch  u_turn.launch
dynamic_avoidance/scripts/: \  dynamic_avoidance.py  dynamic_avoidance_action.py  u_turn.py  u_turn_action.py
kuuve_2018/: CMakeLists.txt  package.xml
kuuve_lidar_missions/: CMakeLists.txt  package.xml
kuuve_lidar_missions/launch/: dynamic_avoidance.launch  obstacle_detector.launch  obstacle_detector_bag.launch
kuuve_lidar_missions/scripts/: '  dynamic_avoidance.py  u_turn.py
kuuve_lidar_missions/src/: static_avoidance_tt.cpp
kuuve_parking/src/: ParkingNode.cpp
kuuve_platform_control/: CMakeLists.txt  package.xml
kuuve_platform_control/launch/: test_serial.launch
kuuve_platform_control/src/: '  teleop_kuuve_key.cpp  write_serial.cpp
lane_detector/: CMakeLists.txt  package.xml
lane_detector/src/: InToOutLaneDetector.cpp  LaneDetector.cpp  LaneDetectorNode.cpp
launch/: dynamic_avoidance.launch  dynamic_avoidance_action.launch
mission_planner/: CMakeLists.txt  package.xml
mission_planner/launch/: state_machine_competition.launch  state_machine_simple.launch  state_machine_simple_dynamic_test.launch
mission_planner/scripts/: action_client.py  action_client_sub_key.py  action_clients_test.py  action_server1.py  action_server2.py  monitor_state.py  state_machine_simple.py
narrow_path/: package.xml
narrow_path/include/: narrow_path.h
narrow_path/launch/: narrow_path.launch  s_path.launch
narrow_path/src/: narrow_path.cpp  narrow_path_action.cpp  narrow_path_node.cpp  s_path.cpp
platform_control/src/: write_serial.cpp
scripts/: dynamic_avoidace.py  dynamic_avoidance.py  dynamic_avoidance_action.py
static_avoidance/: CMakeLists.txt  package.xml
static_avoidance/include/: static_avoidance.h
static_avoidance/launch/: box_filter.yaml  static_avoidance.launch  static_avoidance_bag.launch
static_avoidance/src/: l_static_avoidance.cpp  r_static_avoidance.cpp  static_avoidance.cpp  static_avoidance_node.cpp
traffic_sign/: CMakeLists.txt  output_labels.txt  package.xml
traffic_sign/launch/: sign_test.launch
traffic_sign/scripts/: 4.py  class (copy).py  class.py  class3.py  get_image.py  sign (copy).py  sign.py  sign2.py  talker.py  yolo.py
u_turn/: CMakeLists.txt
u_turn/launch/: u_turn.launch
u_turn/scripts/: dynamic_avoidance.py  u_turn.py  (+1 more)
(+4 files in other folders)
